--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -1,5 +1,339 @@
 {
-    "hello": "Hello",
-    "welcome": "Welcome to My App!"
-  }
-  
+  "Wi-Fi Scanner": "Wi-Fi Scanner",
+  "Password": "Password",
+  "Cancel": "Cancel",
+  "Please enable Wi-Fi to continue": "Please enable Wi-Fi to continue",
+  "Enable Wi-Fi": "Enable Wi-Fi",
+  "Signal Strength: {} dBm ({}%)": "Signal Strength: {} dBm ({}%)",
+  "Enter Password for {}": "Enter Password for {}",
+  "Finding Device": "Finding Device",
+  "Searching for device...": "Searching for device...",
+  "Yes, Found": "Yes, Found",
+  "No, Still not found": "No, Still not found",
+  "Report an Issue": "Report an Issue",
+  "Describe Your Issue": "Describe Your Issue",
+  "Enter your issue here...": "Enter your issue here...",
+  "Send Issue": "Send Issue",
+  "Home": "Home",
+  "Reminders": "Reminders",
+  "Profile": "Profile",
+  "Shop": "Shop",
+  "Scanner": "Scanner",
+  "Add Medicine": "Add Medicine",
+  "Scan Medicine": "Scan Medicine",
+  "Scan Prescription": "Scan Prescription",
+  "Prescrtiption Scanner": "Prescription Scanner",
+  "No documents scanned yet.": "No documents scanned yet.",
+  "DocumentNumber": "Document {number}",
+  "Prescription Details": "Prescription Details",
+  "Uploaded on: @date": "Uploaded on: @date",
+  "Fetching medicines...": "Fetching medicines...",
+  "No medicine names found.": "No medicine names found.",
+  "Detected Medicines": "Detected Medicines",
+  "Add": "Add",
+  "Medicine Scanner": "Medicine Scanner",
+  "Capture or Upload an Image": "Capture or Upload an Image",
+  "name": "name",
+  "dosage": "dosage",
+  "uses": "uses",
+  "side_effects": "side_effects",
+  "precautions": "precautions",
+  "interactions": "interactions",
+  "storage": "storage",
+  "Hello! I'm SmartDose, your health assistant. How can I help you today with your health-related questions?": "Hello! I'm SmartDose, your health assistant. How can I help you today with your health-related questions?",
+  "Describe the Image": "Describe the Image",
+  "Enter a description...": "Enter a description...",
+  "Submit": "Submit",
+  "ChatBot": "ChatBot",
+  "Set Medicine": "Set Medicine",
+  "Pills name": "Pills name",
+  "Amount": "Amount",
+  "Next": "Next",
+  "Please add a medicine name.": "Please add a medicine name.",
+  "Dose Frequency": "Dose Frequency",
+  "1 time, Daily": "1 time, Daily",
+  "2 times, Daily": "2 times, Daily",
+  "3 times, Daily": "3 times, Daily",
+  "Custom": "Custom",
+  "Medicine Days": "Medicine Days",
+  "Medicine Times": "Medicine Times",
+  "Maximum number of doses reached": "Maximum number of doses reached",
+  "Start Date": "Start Date",
+  "End Date": "End Date",
+  "Please select a Start Date first": "Please select a Start Date first",
+  "Save": "Save",
+  "User is not authenticated.": "User is not authenticated.",
+  "Medicine Name": "Medicine Name",
+  "Mon": "Mon",
+  "Tue": "Tue",
+  "Wed": "Wed",
+  "Thu": "Thu",
+  "Fri": "Fri",
+  "Sat": "Sat",
+  "Sun": "Sun",
+  "Clear All": "Clear All",
+  "Select All": "Select All",
+  "Please select a dose frequency": "Please select a dose frequency",
+  "per day": "per day",
+  "Select Time": "Select Time",
+  "OK": "OK",
+  "1st Intake": "1st Intake",
+  "2nd Intake": "2nd Intake",
+  "3rd Intake": "3rd Intake",
+  "Select time": "Select time",
+  "Alarms": "Alarms",
+  "Notifications": "Notifications",
+  "Please enter at least one medicine": "Please enter at least one medicine",
+  "Medicine deleted": "Medicine deleted",
+  "Delete": "Delete",
+  "Edit": "Edit",
+  "Do you want to delete this medicine entry? This action cannot be undone.": "Do you want to delete this medicine entry? This action cannot be undone.",
+  "Delete Item?": "Delete Item?",
+  "Confirm Deletion": "Confirm Deletion",
+  "No medicines scheduled for this day.": "No medicines scheduled for this day.",
+  "No medicines found. Click + to add one.": "No medicines found. Click + to add one.",
+  "No medicines found for patient.": "No medicines found for patient.",
+  "Patient email not found in caretaker data.": "Patient email not found in caretaker data.",
+  "Please select at least one day.": "Please select at least one day.",
+  "Patient": "Patient",
+  "Patient data not found": "Patient data not found",
+  "SmartDose": "SmartDose",
+  "Smart Pillbox": "Smart Pillbox",
+  "Connected": "Connected",
+  "Connection": "Connection",
+  "Connect": "Connect",
+  "Find Device": "Find Device",
+  "Find": "Find",
+  "Facing some issues with the box?": "Facing some issues with the box?",
+  "Profile Settings": "Profile Settings",
+  "Unknown": "Unknown",
+  "Feedback": "Feedback",
+  "How was your experience?": "How was your experience?",
+  "Tell us more about your experience...": "Tell us more about your experience...",
+  "Please select a rating": "Please select a rating",
+  "Submit Feedback": "Submit Feedback",
+  "Log Out": "Log Out",
+  "Are you sure you want to log out?": "Are you sure you want to log out?",
+  "CANCEL": "CANCEL",
+  "LOG OUT": "LOG OUT",
+  "Setting Up Your Profile...": "Setting Up Your Profile...",
+  "Please fill all required fields": "Please fill all required fields",
+  "Image upload failed. Please try again.": "Image upload failed. Please try again.",
+  "Error saving data": "Error saving data",
+  "Choose Photo Source": "Choose Photo Source",
+  "Gallery": "Gallery",
+  "Camera": "Camera",
+  "Tell us about ": "Tell us about ",
+  "yourself": "yourself",
+  "Full Name": "Full Name",
+  "Enter your full name": "Enter your full name",
+  "Date of Birth": "Date of Birth",
+  "Select your DOB": "Select your DOB",
+  "Save & Continue": "Save & Continue",
+  "Male": "Male",
+  "Female": "Female",
+  "Prefer not to say": "Prefer not to say",
+  "Gender": "Gender",
+  "Contact Number": "Contact Number",
+  "About Us": "About Us",
+  "At Smart PillBox": "At Smart PillBox",
+  "Our vision is to create a world where medication non-adherence is a thing of the past. We empower individuals and caregivers with an intelligent, sleek solution for managing daily medications.": "Our vision is to create a world where medication non-adherence is a thing of the past. We empower individuals and caregivers with an intelligent, sleek solution for managing daily medications.",
+  "We are dedicated to revolutionizing medication management through cutting-edge technology. Our mission is to enhance medication adherence and elevate the quality of life for individuals, especially the elderly and those managing chronic conditions.": "We are dedicated to revolutionizing medication management through cutting-edge technology. Our mission is to enhance medication adherence and elevate the quality of life for individuals, especially the elderly and those managing chronic conditions.",
+  "We empower individuals and caregivers with an intelligent, sleek solution for managing daily medications.": "We empower individuals and caregivers with an intelligent, sleek solution for managing daily medications.",
+  "Why Choose Smart PillBox?": "Why Choose Smart PillBox?",
+  "Automated Reminders": "Automated Reminders",
+  "Never miss a dose with stylish, timely alerts.": "Never miss a dose with stylish, timely alerts.",
+  "User-Friendly Design": "User-Friendly Design",
+  "Sleek, intuitive, and perfect for all ages.": "Sleek, intuitive, and perfect for all ages.",
+  "Caregiver Notifications": "Caregiver Notifications",
+  "Stay connected with elegant updates.": "Stay connected with elegant updates.",
+  "Secure & Portable": "Secure & Portable",
+  "Compact luxury built for your lifestyle.": "Compact luxury built for your lifestyle.",
+  "Buzzer Settings": "Buzzer Settings",
+  "Select Buzzer Tone": "Select Buzzer Tone",
+  "Save Selection": "Save Selection",
+  "Buzzer tone set to": "Buzzer tone set to",
+  "Beep Beep": "Beep Beep",
+  "Calm Tune": "Calm Tune",
+  "Gentle Chime": "Gentle Chime",
+  "Soft Melody": "Soft Melody",
+  "Relaxing Sound": "Relaxing Sound",
+  "You cannot add your own email as caretaker.": "You cannot add your own email as caretaker.",
+  "Caretaker email already added.": "Caretaker email already added.",
+  "Caretakers": "Caretakers",
+  "Add Caretaker Email": "Add Caretaker Email",
+  "Add Caretaker": "Add Caretaker",
+  "Caretaker Emails:": "Caretaker Emails:",
+  "No caretakers added": "No caretakers added",
+  "Could not launch": "Could not launch",
+  "Contact Us": "Contact Us",
+  "Get in Touch": "Get in Touch",
+  "We’re here to help—reach out anytime.": "We’re here to help—reach out anytime.",
+  "Live Chat": "Live Chat",
+  "Chat with us now": "Chat with us now",
+  "Chat feature coming soon!": "Chat feature coming soon!",
+  "Visit Us": "Visit Us",
+  "SVKM's SBMPCOE, Irla, Suvarna Nagar, Vile Parle, Mumbai, Maharashtra 400056": "SVKM's SBMPCOE, Irla, Suvarna Nagar, Vile Parle, Mumbai, Maharashtra 400056",
+  "Email Us": "Email Us",
+  "Call Us": "Call Us",
+  "Error fetching data:": "Error fetching data:",
+  "Image upload failed": "Image upload failed",
+  "Profile updated successfully": "Profile updated successfully",
+  "Error updating data:": "Error updating data:",
+  "Edit Profile": "Edit Profile",
+  "Enter phone number (e.g., +91 9876543210)": "Enter phone number (e.g., +91 9876543210)",
+  "No user is currently signed in.": "No user is currently signed in.",
+  "User document not found.": "User document not found.",
+  "No medication data found.": "No medication data found.",
+  "Medication List": "Medication List",
+  "Medication List PDF": "Medication List PDF",
+  "Error": "Error",
+  "No records found in this date range.": "No records found in this date range.",
+  "Medication Records": "Medication Records",
+  "From": "From",
+  "to": "to",
+  "Date": "Date",
+  "Time": "Time",
+  "Dosage Status": "Dosage Status",
+  "Medication Records PDF": "Medication Records PDF",
+  "Reports": "Reports",
+  "Share Med Logs with your Doctor": "Share Med Logs with your Doctor",
+  "Add New Address": "Add New Address",
+  "Edit Address": "Edit Address",
+  "Building Name & Room Number": "Building Name & Room Number",
+  "Address Line 1": "Address Line 1",
+  "Address Line 2": "Address Line 2",
+  "New Tag (Optional)": "New Tag (Optional)",
+  "Add Address": "Add Address",
+  "Save Changes": "Save Changes",
+  "Please sign in to view addresses": "Please sign in to view addresses",
+  "Saved Addresses": "Saved Addresses",
+  "Address deleted successfully": "Address deleted successfully",
+  "Error deleting address:": "Error deleting address:",
+  "Smart Diagnosis": "Smart Diagnosis",
+  "What is Smart Diagnosis?": "What is Smart Diagnosis?",
+  "Smart Diagnosis is an advanced feature that allows you to check the health and performance of your smart pillbox device.": "Smart Diagnosis is an advanced feature that allows you to check the health and performance of your smart pillbox device.",
+  "Please ensure your device is powered on and connected to your account before starting the diagnosis.": "Please ensure your device is powered on and connected to your account before starting the diagnosis.",
+  "Start Diagnosis": "Start Diagnosis",
+  "Diagnosis Results": "Diagnosis Results",
+  "Product check is in progress...": "Product check is in progress...",
+  "Minor Issues Detected": "Minor Issues Detected",
+  "All Systems Operational": "All Systems Operational",
+  "Your device is functioning but needs some attention.": "Your device is functioning but needs some attention.",
+  "Your device is functioning properly with no issues detected.": "Your device is functioning properly with no issues detected.",
+  "Detailed Results": "Detailed Results",
+  "Recommendations": "Recommendations",
+  "Complete Diagnosis": "Complete Diagnosis",
+  "PLEASE STAY ON THIS SCREEN UNTIL THE DIAGNOSIS IS COMPLETE.": "PLEASE STAY ON THIS SCREEN UNTIL THE DIAGNOSIS IS COMPLETE.",
+  "Otherwise, the diagnosis will end.": "Otherwise, the diagnosis will end.",
+  "Cancel Diagnosis?": "Cancel Diagnosis?",
+  "The diagnosis is still in progress. Are you sure you want to exit?": "The diagnosis is still in progress. Are you sure you want to exit?",
+  "Continue": "Continue",
+  "Exit": "Exit",
+  "Error updating 2FA status. Please try again.": "Error updating 2FA status. Please try again.",
+  "2-Factor Authentication": "2-Factor Authentication",
+  "About 2FA": "About 2FA",
+  "Two-Factor Authentication (2FA) adds an extra layer of security to your account. In addition to your password, you'll need to provide a second form of verification, such as a code sent to your phone or email.": "Two-Factor Authentication (2FA) adds an extra layer of security to your account. In addition to your password, you'll need to provide a second form of verification, such as a code sent to your phone or email.",
+  "Enable 2-Factor Authentication": "Enable 2-Factor Authentication",
+  "2FA Enabled Successfully": "2FA Enabled Successfully",
+  "2FA Disabled Successfully": "2FA Disabled Successfully",
+  "How it Works": "How it Works",
+  "Log in with your username and password": "Log in with your username and password",
+  "Receive a verification code via SMS or email": "Receive a verification code via SMS or email",
+  "Enter the code to access your account": "Enter the code to access your account",
+  "Not Taken": "Not Taken",
+  "Taken": "Taken",
+  "Temperature Sensor": "Temperature Sensor",
+  "Evaporator Defrost": "Evaporator Defrost",
+  "Fan Motor": "Fan Motor",
+  "Pill Dispenser": "Pill Dispenser",
+  "Battery Health": "Battery Health",
+  "Connection Status": "Connection Status",
+  "Fan Motor Maintenance": "Fan Motor Maintenance",
+  "Clean the fan motor area to improve performance.": "Clean the fan motor area to improve performance.",
+  "Regular Cleaning": "Regular Cleaning",
+  "Clean the device exterior weekly with a soft, dry cloth.": "Clean the device exterior weekly with a soft, dry cloth.",
+  "Software Update": "Software Update",
+  "Keep your app updated for the latest features and fixes.": "Keep your app updated for the latest features and fixes.",
+  "Battery Care": "Battery Care",
+  "Charge the device when the battery level falls below 20%.": "Charge the device when the battery level falls below 20%.",
+  "Good": "Good",
+  "General": "General",
+  "Change Password": "Change Password",
+  "Caretaker/Family Member": "Caretaker/Family Member",
+  "Preferences": "Preferences",
+  "Notification Page": "Notification Page",
+  "Dark Mode / Light Mode": "Dark Mode / Light Mode",
+  "Reset": "Reset",
+  "Buzzer": "Buzzer",
+  "More": "More",
+  "About": "About",
+  "Send Feedback": "Send Feedback",
+  "User Name": "User Name",
+  "Feedback submitted successfully": "Feedback submitted successfully",
+  "Password change is only available for email/password accounts.": "Password change is only available for email/password accounts.",
+  "For Google or Facebook accounts, please use their respective password management.": "For Google or Facebook accounts, please use their respective password management.",
+  "New passwords do not match!": "New passwords do not match!",
+  "Password updated successfully!": "Password updated successfully!",
+  "An unexpected error occurred:": "An unexpected error occurred:",
+  "Old Password": "Old Password",
+  "New Password": "New Password",
+  "Confirm New Password": "Confirm New Password",
+  "Password changes are not available for Google/Facebook accounts": "Password changes are not available for Google/Facebook accounts",
+  "Quick Analysis": "Quick Analysis",
+  "Complete device diagnosis in just a few seconds": "Complete device diagnosis in just a few seconds",
+  "Comprehensive Check": "Comprehensive Check",
+  "Tests temperature sensors, motor functions, and more": "Tests temperature sensors, motor functions, and more",
+  "Problem Detection": "Problem Detection",
+  "Identifies potential issues before they affect performance": "Identifies potential issues before they affect performance",
+  "Maintenance Tips": "Maintenance Tips",
+  "Provides recommendations to keep your device running optimally": "Provides recommendations to keep your device running optimally",
+  "Work": "Work",
+  "Other": "Other",
+  "Change Language": "Change Language",
+  "Nearby Pharmacies": "Nearby Pharmacies",
+  "Search for a pharmacy": "Search for a pharmacy",
+  "Phone number is empty": "Phone number is empty",
+  "Please enter a message": "Please enter a message",
+  "Message sent successfully": "Message sent successfully",
+  "Could not send message: ": "Could not send message: ",
+  "Compose your message:": "Compose your message:",
+  "Type your message here...": "Type your message here...",
+  "Scanned Documents:": "Scanned Documents:",
+  "No scanned documents.": "No scanned documents.",
+  "Document": "Document",
+  "OTP sent to your email": "OTP sent to your email",
+  "No user found after login": "No user found after login",
+  "Google Sign-In successful!": "Google Sign-In successful!",
+  "Google Sign-In failed: No user found": "Google Sign-In failed: No user found",
+  "Facebook Sign-In successful!": "Facebook Sign-In successful!",
+  "Facebook Sign-In failed: No user found": "Facebook Sign-In failed: No user found",
+  "Invalid OTP": "Invalid OTP",
+  "Welcome Back!": "Welcome Back!",
+  "Login": "Login",
+  "Continue With Google": "Continue With Google",
+  "Continue With Facebook": "Continue With Facebook",
+  "Verify Your OTP": "Verify Your OTP",
+  "Enter the 6-digit code sent to your email": "Enter the 6-digit code sent to your email",
+  "New OTP sent": "New OTP sent",
+  "Resend OTP": "Resend OTP",
+  "Resend in": "Resend in",
+  "Back to Login": "Back to Login",
+  "Forgot Password?": "Forgot Password?",
+  "Don't have an account?": "Don't have an account?",
+  "Sign Up": "Sign Up",
+  "Time remaining:": "Time remaining:",
+  "Enter Your Email": "Enter Your Email",
+  "Enter Your Password": "Enter Your Password",
+  "Enter your registered email, and we will send a password reset link:": "Enter your registered email, and we will send a password reset link:",
+  "Send Reset Email": "Send Reset Email",
+  "Sign In": "Sign In",
+  "Forgot Password": "Forgot Password",
+  "Become a SmartDose Member!": "Become a SmartDose Member!",
+  "Confirm Your Password": "Confirm Your Password",
+  "Passwords do not match!": "Passwords do not match!",
+  "I agree to the Privacy Policy and Terms of Use": "I agree to the Privacy Policy and Terms of Use",
+  "Register": "Register",
+  "Please agree to the Terms of Use and Privacy Policy to continue.": "Please agree to the Terms of Use and Privacy Policy to continue.",
+  "Already have an account?": "Already have an account?"
+}
