--- a/assets/translations/hi-IN.json
+++ b/assets/translations/hi-IN.json
@@ -1,4 +1,102 @@
 {
+    "Wi-Fi Scanner": "वाई-फाई स्कैनर",
+    "Password": "पासवर्ड",
+    "Cancel": "रद्द करें",
+    "Please enable Wi-Fi to continue": "जारी रखने के लिए कृपया वाई-फाई सक्षम करें",
+    "Enable Wi-Fi": "वाई-फाई सक्षम करें",
+    "Signal Strength: {} dBm ({}%)": "सिग्नल की ताकत: {} dBm ({}%)",
+    "Enter Password for {}": "{} के लिए पासवर्ड दर्ज करें",
+    "Finding Device": "डिवाइस खोज रहे हैं",
+    "Searching for device...": "डिवाइस खोजा जा रहा है...",
+    "Yes, Found": "हाँ, मिल गया",
+    "No, Still not found": "नहीं, अभी तक नहीं मिला",
+    "Report an Issue": "समस्या रिपोर्ट करें",
+    "Describe Your Issue": "अपनी समस्या का विवरण दें",
+    "Enter your issue here...": "यहाँ अपनी समस्या दर्ज करें...",
+    "Send Issue": "समस्या भेजें",
+    "Home": "होम",
+    "Reminders": "अनुस्मारक",
+    "Profile": "प्रोफ़ाइल",
+    "Shop": "दुकान",
+    "Scanner": "स्कैनर",
+    "Add Medicine": "दवा जोड़ें",
+    "Scan Medicine": "दवा स्कैन करें",
+    "Scan Prescription": "प्रिस्क्रिप्शन स्कैन करें",
+    "Prescrtiption Scanner": "प्रिस्क्रिप्शन स्कैनर",
+    "No documents scanned yet.": "अभी तक कोई दस्तावेज़ स्कैन नहीं किया गया है।",
+    "DocumentNumber": "Document {number}",
+    "Prescription Details": "प्रिस्क्रिप्शन विवरण",
+    "Uploaded on: @date": "अपलोड किया गया: @date",
+    "Fetching medicines...": "दवाएं प्राप्त की जा रही हैं...",
+    "No medicine names found.": "कोई दवा नाम नहीं मिला।",
+    "Detected Medicines": "पाई गई दवाएं",
+    "Add": "जोड़ें",
+    "Medicine Scanner": "दवा स्कैनर",
+    "Capture or Upload an Image": "इमेज कैप्चर करें या अपलोड करें",
+    "name": "नाम",
+    "dosage": "खुराक",
+    "uses": "उपयोग",
+    "side_effects": "दुष्प्रभाव",
+    "precautions": "सावधानियां",
+    "interactions": "परस्पर क्रियाएं",
+    "storage": "भंडारण",
+    "Hello! I'm SmartDose, your health assistant. How can I help you today with your health-related questions?": "नमस्ते! मैं SmartDose हूँ, आपका स्वास्थ्य सहायक। मैं आज आपकी स्वास्थ्य संबंधी समस्याओं में कैसे मदद कर सकता हूँ?",
+    "Describe the Image": "छवि का वर्णन करें",
+    "Enter a description...": "विवरण दर्ज करें...",
+    "Submit": "जमा करें",
+    "ChatBot": "चैटबोट",
+    "Set Medicine": "दवा निर्धारित करें",
+    "Pills name": "गोली का नाम",
+    "Amount": "मात्रा",
+    "Next": "आगे",
+    "Please add a medicine name.": "कृपया एक दवा का नाम जोड़ें।",
+    "Dose Frequency": "खुराक की आवृत्ति",
+    "1 time, Daily": "1 बार, प्रतिदिन",
+    "2 times, Daily": "2 बार, प्रतिदिन",
+    "3 times, Daily": "3 बार, प्रतिदिन",
+    "Custom": "कस्टम",
+    "Medicine Days": "दवा के दिन",
+    "Medicine Times": "दवा का समय",
+    "Maximum number of doses reached": "अधिकतम खुराक की संख्या पूरी हो गई है",
+    "Start Date": "प्रारंभ तिथि",
+    "End Date": "समाप्ति तिथि",
+    "Please select a Start Date first": "कृपया पहले प्रारंभ तिथि चुनें",
+    "Save": "सहेजें",
+    "User is not authenticated.": "उपयोगकर्ता प्रमाणित नहीं है।",
+    "Medicine Name": "दवा का नाम",
+    "Mon": "सोम",
+    "Tue": "मंगल",
+    "Wed": "बुध",
+    "Thu": "गुरु",
+    "Fri": "शुक्र",
+    "Sat": "शनि",
+    "Sun": "रवि",
+    "Clear All": "सभी हटाएं",
+    "Select All": "सभी चुनें",
+    "Please select a dose frequency": "कृपया खुराक की आवृत्ति चुनें",
+    "per day": "प्रति दिन",
+    "Select Time": "समय चुनें",
+    "OK": "ठीक है",
+    "1st Intake": "पहली खुराक",
+    "2nd Intake": "दूसरी खुराक",
+    "3rd Intake": "तीसरी खुराक",
+    "Select time": "समय चुनें",
+    "Alarms": "अलार्म",
+    "Notifications": "सूचनाएं",
+    "Please enter at least one medicine": "कृपया कम से कम एक दवा दर्ज करें",
+    "Medicine deleted": "दवा हटा दी गई",
+    "Delete": "हटाएं",
+    "Edit": "संपादित करें",
+    "Do you want to delete this medicine entry? This action cannot be undone.": "क्या आप इस दवा प्रविष्टि को हटाना चाहते हैं? यह क्रिया पूर्ववत नहीं की जा सकती।",
+    "Delete Item?": "आइटम हटाएं?",
+    "Confirm Deletion": "हटाने की पुष्टि करें",
+    "No medicines scheduled for this day.": "इस दिन के लिए कोई दवाएं निर्धारित नहीं हैं।",
+    "No medicines found. Click + to add one.": "कोई दवाएं नहीं मिलीं। जोड़ने के लिए + पर क्लिक करें।",
+    "No medicines found for patient.": "मरीज के लिए कोई दवाएं नहीं मिलीं।",
+    "Patient email not found in caretaker data.": "केयरटेकर डेटा में मरीज का ईमेल नहीं मिला।",
+    "Please select at least one day.": "कृपया कम से कम एक दिन चुनें।",
+    "Patient": "मरीज़",
+    "Patient data not found": "मरीज़ का डेटा नहीं मिला",
     "SmartDose": "स्मार्टडोज़",
     "Smart Pillbox": "स्मार्ट पिलबॉक्स",
     "Connected": "कनेक्टेड",
@@ -6,5 +104,236 @@
     "Connect": "कनेक्ट करें",
     "Find Device": "डिवाइस खोजें",
     "Find": "खोजें",
-    "Facing some issues with the box?": "क्या बॉक्स के साथ कुछ समस्याएँ हैं?"
+    "Facing some issues with the box?": "क्या बॉक्स के साथ कुछ समस्याएँ हैं?",
+    "Profile Settings": "प्रोफ़ाइल सेटिंग्स",
+    "Unknown": "अज्ञात",
+    "Feedback": "प्रतिक्रिया",
+    "How was your experience?": "आपका अनुभव कैसा रहा?",
+    "Tell us more about your experience...": "अपने अनुभव के बारे में अधिक बताएं...",
+    "Please select a rating": "कृपया एक रेटिंग चुनें",
+    "Submit Feedback": "प्रतिक्रिया भेजें",
+    "Log Out": "लॉग आउट करें",
+    "Are you sure you want to log out?": "क्या आप वाकई लॉग आउट करना चाहते हैं?",
+    "CANCEL": "रद्द करें",
+    "LOG OUT": "लॉग आउट करें",
+    "Setting Up Your Profile...": "आपकी प्रोफ़ाइल सेट की जा रही है...",
+    "Please fill all required fields": "कृपया सभी आवश्यक फ़ील्ड भरें",
+    "Image upload failed. Please try again.": "छवि अपलोड विफल रही। कृपया दोबारा प्रयास करें।",
+    "Error saving data": "डेटा सहेजने में त्रुटि",
+    "Choose Photo Source": "फ़ोटो स्रोत चुनें",
+    "Gallery": "गैलरी",
+    "Camera": "कैमरा",
+    "Tell us about ": "हमें बताएं ",
+    "yourself": "अपने बारे में",
+    "Full Name": "पूरा नाम",
+    "Enter your full name": "अपना पूरा नाम दर्ज करें",
+    "Date of Birth": "जन्म तिथि",
+    "Select your DOB": "अपनी जन्म तिथि चुनें",
+    "Save & Continue": "सहेजें और आगे बढ़ें",
+    "Male": "पुरुष",
+    "Female": "महिला",
+    "Prefer not to say": "बताना नहीं चाहेंगे",
+    "Gender": "लिंग",
+    "Contact Number": "संपर्क नंबर",
+    "About Us": "हमारे बारे में",
+    "At Smart PillBox": "Smart PillBox में",
+    "Our vision is to create a world where medication non-adherence is a thing of the past. We empower individuals and caregivers with an intelligent, sleek solution for managing daily medications.": "हमारी दृष्टि एक ऐसी दुनिया बनाना है जहाँ दवा का पालन न करना अतीत की बात हो। हम व्यक्तियों और देखभाल करने वालों को दैनिक दवा प्रबंधन के लिए एक बुद्धिमान, सुंदर समाधान प्रदान करते हैं।",
+    "We are dedicated to revolutionizing medication management through cutting-edge technology. Our mission is to enhance medication adherence and elevate the quality of life for individuals, especially the elderly and those managing chronic conditions.": "हम अत्याधुनिक तकनीक के माध्यम से दवा प्रबंधन में क्रांति लाने के लिए प्रतिबद्ध हैं। हमारा उद्देश्य दवा के पालन में सुधार करना और विशेष रूप से बुजुर्गों व पुरानी बीमारियों से जूझ रहे लोगों के जीवन की गुणवत्ता को बेहतर बनाना है।",
+    "We empower individuals and caregivers with an intelligent, sleek solution for managing daily medications.": "हम व्यक्तियों और देखभालकर्ताओं को दैनिक दवाओं के प्रबंधन के लिए एक स्मार्ट और आधुनिक समाधान प्रदान करते हैं।",
+    "Why Choose Smart PillBox?": "Smart PillBox क्यों चुनें?",
+    "Automated Reminders": "स्वचालित अनुस्मारक",
+    "Never miss a dose with stylish, timely alerts.": "स्टाइलिश और समय पर अलर्ट के साथ कभी भी खुराक न भूलें।",
+    "User-Friendly Design": "उपयोगकर्ता-अनुकूल डिज़ाइन",
+    "Sleek, intuitive, and perfect for all ages.": "स्मूद, सहज और सभी उम्र के लिए उपयुक्त।",
+    "Caregiver Notifications": "देखभालकर्ता सूचनाएं",
+    "Stay connected with elegant updates.": "सुनियोजित अपडेट्स के साथ जुड़े रहें।",
+    "Secure & Portable": "सुरक्षित और पोर्टेबल",
+    "Compact luxury built for your lifestyle.": "आपकी जीवनशैली के लिए डिज़ाइन की गई कॉम्पैक्ट लग्ज़री।",
+    "Buzzer Settings": "बज़र सेटिंग्स",
+    "Select Buzzer Tone": "बज़र टोन चुनें",
+    "Save Selection": "चयन सहेजें",
+    "Buzzer tone set to": "बज़र टोन सेट किया गया:",
+    "Beep Beep": "बीप बीप",
+    "Calm Tune": "शांत धुन",
+    "Gentle Chime": "कोमल घंटी",
+    "Soft Melody": "मुलायम राग",
+    "Relaxing Sound": "आरामदायक ध्वनि",
+    "You cannot add your own email as caretaker.": "आप अपना ईमेल देखभालकर्ता के रूप में नहीं जोड़ सकते।",
+    "Caretaker email already added.": "देखभालकर्ता ईमेल पहले से जोड़ा गया है।",
+    "Caretakers": "देखभालकर्ता",
+    "Add Caretaker Email": "देखभालकर्ता ईमेल जोड़ें",
+    "Add Caretaker": "देखभालकर्ता जोड़ें",
+    "Caretaker Emails:": "देखभालकर्ता ईमेल:",
+    "No caretakers added": "कोई देखभालकर्ता नहीं जोड़ा गया",
+    "Could not launch": "शुरू नहीं किया जा सका",
+    "Contact Us": "संपर्क करें",
+    "Get in Touch": "हमसे जुड़ें",
+    "We’re here to help—reach out anytime.": "हम आपकी मदद के लिए हमेशा उपलब्ध हैं — कभी भी संपर्क करें।",
+    "Live Chat": "लाइव चैट",
+    "Chat with us now": "अब हमसे बात करें",
+    "Chat feature coming soon!": "चैट सुविधा जल्द ही उपलब्ध होगी!",
+    "Visit Us": "हमसे मिलें",
+    "SVKM's SBMPCOE, Irla, Suvarna Nagar, Vile Parle, Mumbai, Maharashtra 400056": "SVKM का SBMPCOE, इरला, सुवर्ण नगर, विले पार्ले, मुंबई, महाराष्ट्र 400056",
+    "Email Us": "हमें ईमेल करें",
+    "Call Us": "हमें कॉल करें",
+    "Error fetching data:": "डेटा लाने में त्रुटि:",
+    "Image upload failed": "छवि अपलोड विफल रही",
+    "Profile updated successfully": "प्रोफ़ाइल सफलतापूर्वक अपडेट की गई",
+    "Error updating data:": "डेटा अपडेट करने में त्रुटि:",
+    "Edit Profile": "प्रोफ़ाइल संपादित करें",
+    "Enter phone number (e.g., +91 9876543210)": "फ़ोन नंबर दर्ज करें (जैसे, +91 9876543210)",
+    "No user is currently signed in.": "वर्तमान में कोई उपयोगकर्ता साइन इन नहीं है।",
+    "User document not found.": "उपयोगकर्ता दस्तावेज़ नहीं मिला।",
+    "No medication data found.": "कोई दवा डेटा नहीं मिला।",
+    "Medication List": "दवा सूची",
+    "Medication List PDF": "दवा सूची (PDF)",
+    "Error": "त्रुटि",
+    "No records found in this date range.": "इस तिथि सीमा में कोई रिकॉर्ड नहीं मिला।",
+    "Medication Records": "दवा रिकॉर्ड",
+    "From": "से",
+    "to": "तक",
+    "Date": "तारीख",
+    "Time": "समय",
+    "Dosage Status": "खुराक की स्थिति",
+    "Medication Records PDF": "दवा रिकॉर्ड पीडीएफ",
+    "Reports": "रिपोर्ट्स",
+    "Share Med Logs with your Doctor": "अपने डॉक्टर के साथ दवा लॉग साझा करें",
+    "Add New Address": "नया पता जोड़ें",
+    "Edit Address": "पता संपादित करें",
+    "Building Name & Room Number": "इमारत का नाम और कमरा नंबर",
+    "Address Line 1": "पता पंक्ति 1",
+    "Address Line 2": "पता पंक्ति 2",
+    "New Tag (Optional)": "नया टैग (वैकल्पिक)",
+    "Add Address": "पता जोड़ें",
+    "Save Changes": "परिवर्तन सहेजें",
+    "Please sign in to view addresses": "पते देखने के लिए कृपया साइन इन करें",
+    "Saved Addresses": "सहेजे गए पते",
+    "Address deleted successfully": "पता सफलतापूर्वक हटाया गया",
+    "Error deleting address:": "पता हटाने में त्रुटि:",
+    "Smart Diagnosis": "स्मार्ट निदान",
+    "What is Smart Diagnosis?": "स्मार्ट निदान क्या है?",
+    "Smart Diagnosis is an advanced feature that allows you to check the health and performance of your smart pillbox device.": "स्मार्ट निदान एक उन्नत सुविधा है जो आपको अपने स्मार्ट पिलबॉक्स डिवाइस की स्थिति और प्रदर्शन की जांच करने की अनुमति देती है।",
+    "Please ensure your device is powered on and connected to your account before starting the diagnosis.": "निदान शुरू करने से पहले कृपया सुनिश्चित करें कि आपका डिवाइस चालू है और आपके खाते से जुड़ा हुआ है।",
+    "Start Diagnosis": "निदान शुरू करें",
+    "Diagnosis Results": "निदान परिणाम",
+    "Product check is in progress...": "उत्पाद की जांच जारी है...",
+    "Minor Issues Detected": "कुछ मामूली समस्याएं मिलीं",
+    "All Systems Operational": "सभी सिस्टम कार्यशील हैं",
+    "Your device is functioning but needs some attention.": "आपका डिवाइस काम कर रहा है लेकिन कुछ ध्यान देने की आवश्यकता है।",
+    "Your device is functioning properly with no issues detected.": "आपका डिवाइस पूरी तरह कार्यशील है, कोई समस्या नहीं पाई गई।",
+    "Detailed Results": "विस्तृत परिणाम",
+    "Recommendations": "सिफारिशें",
+    "Complete Diagnosis": "निदान पूरा करें",
+    "PLEASE STAY ON THIS SCREEN UNTIL THE DIAGNOSIS IS COMPLETE.": "कृपया निदान पूरा होने तक इस स्क्रीन पर बने रहें।",
+    "Otherwise, the diagnosis will end.": "अन्यथा, निदान समाप्त हो जाएगा।",
+    "Cancel Diagnosis?": "क्या आप निदान रद्द करना चाहते हैं?",
+    "The diagnosis is still in progress. Are you sure you want to exit?": "निदान अभी भी चल रहा है। क्या आप वाकई बाहर निकलना चाहते हैं?",
+    "Continue": "जारी रखें",
+    "Exit": "बाहर निकलें",
+    "Error updating 2FA status. Please try again.": "2FA स्थिति अपडेट करने में त्रुटि। कृपया पुनः प्रयास करें।",
+    "2-Factor Authentication": "दो-चरणीय प्रमाणीकरण",
+    "About 2FA": "2FA के बारे में",
+    "Two-Factor Authentication (2FA) adds an extra layer of security to your account. In addition to your password, you'll need to provide a second form of verification, such as a code sent to your phone or email.": "दो-चरणीय प्रमाणीकरण (2FA) आपके खाते की सुरक्षा के लिए एक अतिरिक्त परत जोड़ता है। पासवर्ड के अलावा, आपको अपने फ़ोन या ईमेल पर भेजे गए कोड जैसे एक अतिरिक्त सत्यापन दर्ज करना होगा।",
+    "Enable 2-Factor Authentication": "2FA सक्षम करें",
+    "2FA Enabled Successfully": "2FA सफलतापूर्वक सक्रिय किया गया",
+    "2FA Disabled Successfully": "2FA सफलतापूर्वक निष्क्रिय किया गया",
+    "How it Works": "यह कैसे काम करता है",
+    "Log in with your username and password": "अपने उपयोगकर्ता नाम और पासवर्ड के साथ लॉग इन करें",
+    "Receive a verification code via SMS or email": "SMS या ईमेल के माध्यम से सत्यापन कोड प्राप्त करें",
+    "Enter the code to access your account": "अपने खाते में प्रवेश करने के लिए कोड दर्ज करें",
+    "Not Taken": "नहीं ली गई",
+    "Taken": "ली गई",
+    "Temperature Sensor": "तापमान संवेदक",
+    "Evaporator Defrost": "इवैपोरेटर डीफ्रॉस्ट",
+    "Fan Motor": "पंखा मोटर",
+    "Pill Dispenser": "गोली वितरण यंत्र",
+    "Battery Health": "बैटरी की स्थिति",
+    "Connection Status": "कनेक्शन की स्थिति",
+    "Fan Motor Maintenance": "पंखा मोटर का रखरखाव",
+    "Clean the fan motor area to improve performance.": "प्रदर्शन सुधारने के लिए पंखा मोटर क्षेत्र को साफ करें।",
+    "Regular Cleaning": "नियमित सफाई",
+    "Clean the device exterior weekly with a soft, dry cloth.": "डिवाइस के बाहरी हिस्से को साप्ताहिक रूप से एक मुलायम, सूखे कपड़े से साफ करें।",
+    "Software Update": "सॉफ़्टवेयर अपडेट",
+    "Keep your app updated for the latest features and fixes.": "नवीनतम सुविधाओं और सुधारों के लिए अपने ऐप को अद्यतित रखें।",
+    "Battery Care": "बैटरी की देखभाल",
+    "Charge the device when the battery level falls below 20%.": "जब बैटरी स्तर 20% से नीचे हो जाए तो डिवाइस को चार्ज करें।",
+    "Good": "अच्छा",
+    "General": "जनरल",
+    "Change Password": "पासवर्ड बदलें",
+    "Caretaker/Family Member": "देखभालकर्ता/परिवार सदस्य",
+    "Preferences": "सेटिंग्स",
+    "Notification Page": "नोटिफिकेशन पेज",
+    "Dark Mode / Light Mode": "डार्क मोड / लाइट मोड",
+    "Reset": "रीसेट",
+    "Buzzer": "बज़र",
+    "More": "और विकल्प",
+    "About": "ऐप जानकारी",
+    "Send Feedback": "फीडबैक भेजें",
+    "User Name": "उपयोगकर्ता नाम",
+    "Feedback submitted successfully": "फीडबैक सफलतापूर्वक भेजा गया",
+    "Password change is only available for email/password accounts.": "पासवर्ड परिवर्तन केवल ईमेल/पासवर्ड खातों के लिए उपलब्ध है।",
+    "For Google or Facebook accounts, please use their respective password management.": "Google या Facebook खातों के लिए कृपया उनके संबंधित पासवर्ड प्रबंधन का उपयोग करें।",
+    "New passwords do not match!": "नए पासवर्ड मेल नहीं खा रहे हैं!",
+    "Password updated successfully!": "पासवर्ड सफलतापूर्वक अपडेट कर दिया गया है!",
+    "An unexpected error occurred:": "एक अप्रत्याशित त्रुटि हुई:",
+    "Old Password": "पुराना पासवर्ड",
+    "New Password": "नया पासवर्ड",
+    "Confirm New Password": "नया पासवर्ड पुष्टि करें",
+    "Password changes are not available for Google/Facebook accounts": "Google/Facebook खातों के लिए पासवर्ड परिवर्तन उपलब्ध नहीं है",
+    "Quick Analysis": "त्वरित विश्लेषण",
+    "Complete device diagnosis in just a few seconds": "सिर्फ कुछ सेकंड में डिवाइस का पूरा निदान करें",
+    "Comprehensive Check": "व्यापक जांच",
+    "Tests temperature sensors, motor functions, and more": "तापमान सेंसर, मोटर कार्य और अधिक की जांच करता है",
+    "Problem Detection": "समस्या का पता लगाना",
+    "Identifies potential issues before they affect performance": "प्रदर्शन को प्रभावित करने से पहले संभावित समस्याओं की पहचान करता है",
+    "Maintenance Tips": "रखरखाव सुझाव",
+    "Provides recommendations to keep your device running optimally": "आपके डिवाइस को इष्टतम रूप से चालू रखने के लिए सुझाव प्रदान करता है",
+    "Work": "काम",
+    "Other": "अन्य",
+    "Change Language": "भाषा बदलें",
+    "Nearby Pharmacies": "निकटतम फार्मेसियाँ",
+    "Search for a pharmacy": "फार्मेसी खोजें",
+    "Phone number is empty": "फ़ोन नंबर खाली है",
+    "Please enter a message": "कृपया एक संदेश दर्ज करें",
+    "Message sent successfully": "संदेश सफलतापूर्वक भेजा गया",
+    "Could not send message: ": "संदेश भेजा नहीं जा सका: ",
+    "Compose your message:": "अपना संदेश लिखें:",
+    "Type your message here...": "यहाँ अपना संदेश लिखें...",
+    "Scanned Documents:": "स्कैन किए गए दस्तावेज़:",
+    "No scanned documents.": "कोई स्कैन किया गया दस्तावेज़ नहीं है।",
+    "Document": "दस्तावेज़",
+    "OTP sent to your email": "आपके ईमेल पर ओटीपी भेजा गया है",
+    "No user found after login": "लॉगिन के बाद कोई उपयोगकर्ता नहीं मिला",
+    "Google Sign-In successful!": "गूगल साइन-इन सफल हुआ!",
+    "Google Sign-In failed: No user found": "गूगल साइन-इन असफल: कोई उपयोगकर्ता नहीं मिला",
+    "Facebook Sign-In successful!": "फेसबुक साइन-इन सफल हुआ!",
+    "Facebook Sign-In failed: No user found": "फेसबुक साइन-इन असफल: कोई उपयोगकर्ता नहीं मिला",
+    "Invalid OTP": "अमान्य ओटीपी",
+    "Welcome Back!": "वापसी पर स्वागत है!",
+    "Login": "लॉगिन करें",
+    "Continue With Google": "गूगल के साथ जारी रखें",
+    "Continue With Facebook": "फेसबुक के साथ जारी रखें",
+    "Verify Your OTP": "अपना ओटीपी सत्यापित करें",
+    "Enter the 6-digit code sent to your email": "अपने ईमेल पर भेजा गया 6-अंकों का कोड दर्ज करें",
+    "New OTP sent": "नया ओटीपी भेजा गया",
+    "Resend OTP": "ओटीपी पुनः भेजें",
+    "Resend in": "पुनः भेजें में",
+    "Back to Login": "लॉगिन पर वापस जाएं",
+    "Forgot Password?": "पासवर्ड भूल गए?",
+    "Don't have an account?": "क्या आपके पास खाता नहीं है?",
+    "Sign Up": "साइन अप करें",
+    "Time remaining:": "शेष समय:",
+    "Enter Your Email": "अपना ईमेल दर्ज करें",
+    "Enter Your Password": "अपना पासवर्ड दर्ज करें",
+    "Enter your registered email, and we will send a password reset link:": "अपना पंजीकृत ईमेल दर्ज करें, और हम पासवर्ड रीसेट लिंक भेजेंगे:",
+    "Send Reset Email": "रीसेट ईमेल भेजें",
+    "Sign In": "साइन इन करें",
+    "Forgot Password": "पासवर्ड भूल गए",
+    "Become a SmartDose Member!": "SmartDose सदस्य बनें!",
+    "Confirm Your Password": "अपना पासवर्ड पुष्टि करें",
+    "Passwords do not match!": "पासवर्ड मेल नहीं खा रहे हैं!",
+    "I agree to the Privacy Policy and Terms of Use": "मैं गोपनीयता नीति और उपयोग की शर्तों से सहमत हूं",
+    "Register": "पंजीकरण करें",
+    "Please agree to the Terms of Use and Privacy Policy to continue.": "कृपया जारी रखने के लिए उपयोग की शर्तों और गोपनीयता नीति से सहमत हों।",
+    "Already have an account?": "पहले से ही खाता है?"
 }
