--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -335,5 +335,8 @@
   "I agree to the Privacy Policy and Terms of Use": "I agree to the Privacy Policy and Terms of Use",
   "Register": "Register",
   "Please agree to the Terms of Use and Privacy Policy to continue.": "Please agree to the Terms of Use and Privacy Policy to continue.",
-  "Already have an account?": "Already have an account?"
+  "Already have an account?": "Already have an account?",
+  "Allow": "Allow",
+  "Don't allow": "Don't allow",
+  "Or Continue with": "Or Continue with"
 }
