--- a/assets/translations/gu-IN.json
+++ b/assets/translations/gu-IN.json
@@ -335,5 +335,8 @@
     "I agree to the Privacy Policy and Terms of Use": "હું ગોપનીયતા નીતિ અને ઉપયોગની શરતો સાથે સંમત છું",
     "Register": "નોંધણી કરો",
     "Please agree to the Terms of Use and Privacy Policy to continue.": "ચાલુ રાખવા માટે કૃપા કરીને ઉપયોગની શરતો અને ગોપનીયતા નીતિ સાથે સંમત થાઓ.",
-    "Already have an account?": "પહેલેથી જ ખાતું છે?"
+    "Already have an account?": "પહેલેથી જ ખાતું છે?",
+    "Allow": "અનુમતિ આપો",
+    "Don't allow": "અનુમતિ આપશો નહીં",
+    "Or Continue with": "અથવા સાથે ચાલુ રાખો"
 }
