--- a/assets/translations/hi-IN.json
+++ b/assets/translations/hi-IN.json
@@ -335,5 +335,8 @@
     "I agree to the Privacy Policy and Terms of Use": "मैं गोपनीयता नीति और उपयोग की शर्तों से सहमत हूं",
     "Register": "पंजीकरण करें",
     "Please agree to the Terms of Use and Privacy Policy to continue.": "कृपया जारी रखने के लिए उपयोग की शर्तों और गोपनीयता नीति से सहमत हों।",
-    "Already have an account?": "पहले से ही खाता है?"
+    "Already have an account?": "पहले से ही खाता है?",
+    "Allow": "अनुमति दें",
+    "Don't allow": "अनुमति न दें",
+    "Or Continue with": "या इसके साथ जारी रखें"
 }
