--- a/assets/translations/mr-IN.json
+++ b/assets/translations/mr-IN.json
@@ -335,5 +335,8 @@
     "I agree to the Privacy Policy and Terms of Use": "मी गोपनीयता धोरण आणि वापराच्या अटींशी सहमत आहे",
     "Register": "नोंदणी करा",
     "Please agree to the Terms of Use and Privacy Policy to continue.": "पुढे चालू ठेवण्यासाठी कृपया वापराच्या अटी आणि गोपनीयता धोरणाशी सहमत व्हा.",
-    "Already have an account?": "आधीच खाते आहे का?"
+    "Already have an account?": "आधीच खाते आहे का?",
+    "Allow": "परवानगी द्या",
+    "Don't allow": "परवानगी नाकाराः",
+    "Or Continue with": "किंवा यासह पुढे जा"
 }
