--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -22,7 +22,7 @@
   "Add Medicine": "Add Medicine",
   "Scan Medicine": "Scan Medicine",
   "Scan Prescription": "Scan Prescription",
-  "Prescrtiption Scanner": "Prescription Scanner",
+  "Prescription Scanner": "Prescription Scanner",
   "No documents scanned yet.": "No documents scanned yet.",
   "DocumentNumber": "Document {number}",
   "Prescription Details": "Prescription Details",
@@ -320,7 +320,7 @@
   "Resend in": "Resend in",
   "Back to Login": "Back to Login",
   "Forgot Password?": "Forgot Password?",
-  "Don't have an account?": "Don't have an account?",
+  "Don't have an account? ": "Don't have an account? ",
   "Sign Up": "Sign Up",
   "Time remaining:": "Time remaining:",
   "Enter Your Email": "Enter Your Email",
@@ -338,5 +338,19 @@
   "Already have an account?": "Already have an account?",
   "Allow": "Allow",
   "Don't allow": "Don't allow",
-  "Or Continue with": "Or Continue with"
+  "Or Continue with": "Or Continue with",
+  "Wellness Path": "Wellness Path",
+  "Begin your path to better health by managing your medications effortlessly. Stay organized, and embrace a healthier lifestyle from day one.": "Begin your path to better health by managing your medications effortlessly. Stay organized, and embrace a healthier lifestyle from day one.",
+  "Stay on Track": "Stay on Track",
+  "Keep your health goals in check by managing your medication schedule. Stay organized and never miss a step in your wellness journey.": "Keep your health goals in check by managing your medication schedule. Stay organized and never miss a step in your wellness journey.",
+  "Gentle Reminders": "Gentle Reminders",
+  "Receive gentle reminders when it's time to take your medicine. Let us help you stay consistent, ensuring you never forget a dose.": "Receive gentle reminders when it's time to take your medicine. Let us help you stay consistent, ensuring you never forget a dose.",
+  "Skip": "Skip",
+  "Done": "Done",
+  "Language": "Language",
+  "Appearance": "Appearance",
+  "Light Theme": "Light Theme",
+  "Dark Theme": "Dark Theme",
+  "System Default": "System Default",
+  "Select your preferred language": "Select your preferred language"
 }
