--- a/assets/translations/gu-IN.json
+++ b/assets/translations/gu-IN.json
@@ -22,7 +22,7 @@
     "Add Medicine": "દવા ઉમેરો",
     "Scan Medicine": "દવા સ્કેન કરો",
     "Scan Prescription": "પ્રિસ્ક્રિપ્શન સ્કેન કરો",
-    "Prescrtiption Scanner": "પ્રિસ્ક્રિપ્શન સ્કેનર",
+    "Prescription Scanner": "પ્રિસ્ક્રિપ્શન સ્કેનર",
     "No documents scanned yet.": "હજુ સુધી કોઈ દસ્તાવેજ સ્કેન થયેલ નથી.",
     "DocumentNumber": "દસ્તાવેજ {number}",
     "Prescription Details": "પ્રિસ્ક્રિપ્શન વિગતો",
@@ -338,5 +338,19 @@
     "Already have an account?": "પહેલેથી જ ખાતું છે?",
     "Allow": "અનુમતિ આપો",
     "Don't allow": "અનુમતિ આપશો નહીં",
-    "Or Continue with": "અથવા સાથે ચાલુ રાખો"
+    "Or Continue with": "અથવા સાથે ચાલુ રાખો",
+    "Wellness Path": "આરોગ્ય માર્ગ",
+    "Begin your path to better health by managing your medications effortlessly. Stay organized, and embrace a healthier lifestyle from day one.": "તમારી દવાઓને સરળતાથી મેનેજ કરીને વધુ સારું આરોગ્ય મેળવો. વ્યવસ્થિત રહો અને પહેલાના દિવસથી જ વધુ આરોગ્યપ્રદ જીવનશૈલી અપનાવો.",
+    "Stay on Track": "માર્ગ પર ટકી રહો",
+    "Keep your health goals in check by managing your medication schedule. Stay organized and never miss a step in your wellness journey.": "તમારી દવાની સમયસૂચિનું સંચાલન કરીને તમારા આરોગ્ય લક્ષ્યોને નિયંત્રણમાં રાખો. વ્યવસ્થિત રહો અને તમારા આરોગ્ય માર્ગમાં એક પણ પગલું ચૂકી ન જાવ.",
+    "Gentle Reminders": "નરમ યાદ અપાવટો",
+    "Receive gentle reminders when it's time to take your medicine. Let us help you stay consistent, ensuring you never forget a dose.": "જ્યારે દવા લેવાનો સમય થાય ત્યારે નરમ યાદ અપાવટો મેળવો. અમે તમને નિયમિત રહેવામાં મદદ કરીશું જેથી તમે એક પણ માત્રા ભૂલશો નહીં.",
+    "Skip": "છોડી દો",
+    "Done": "પૂરું",
+    "Language": "ભાષા",
+    "Appearance": "દેખાવ",
+    "Light Theme": "હળવો થીમ",
+    "Dark Theme": "ઘાટો થીમ",
+    "System Default": "સિસ્ટમ ડિફોલ્ટ",
+    "Select your preferred language": "તમારી પસંદગીની ભાષા પસંદ કરો"
 }
