--- a/assets/translations/hi-IN.json
+++ b/assets/translations/hi-IN.json
@@ -22,7 +22,7 @@
     "Add Medicine": "दवा जोड़ें",
     "Scan Medicine": "दवा स्कैन करें",
     "Scan Prescription": "प्रिस्क्रिप्शन स्कैन करें",
-    "Prescrtiption Scanner": "प्रिस्क्रिप्शन स्कैनर",
+    "Prescription Scanner": "प्रिस्क्रिप्शन स्कैनर",
     "No documents scanned yet.": "अभी तक कोई दस्तावेज़ स्कैन नहीं किया गया है।",
     "DocumentNumber": "Document {number}",
     "Prescription Details": "प्रिस्क्रिप्शन विवरण",
@@ -338,5 +338,19 @@
     "Already have an account?": "पहले से ही खाता है?",
     "Allow": "अनुमति दें",
     "Don't allow": "अनुमति न दें",
-    "Or Continue with": "या इसके साथ जारी रखें"
+    "Or Continue with": "या इसके साथ जारी रखें",
+    "Wellness Path": "स्वास्थ्य मार्ग",
+    "Begin your path to better health by managing your medications effortlessly. Stay organized, and embrace a healthier lifestyle from day one.": "अपनी दवाओं को आसानी से प्रबंधित करके बेहतर स्वास्थ्य की ओर पहला कदम बढ़ाएं। व्यवस्थित रहें और पहले दिन से ही एक स्वस्थ जीवनशैली अपनाएं।",
+    "Stay on Track": "पथ पर बने रहें",
+    "Keep your health goals in check by managing your medication schedule. Stay organized and never miss a step in your wellness journey.": "अपनी दवा की समय-सारणी को प्रबंधित करके अपने स्वास्थ्य लक्ष्यों को नियंत्रण में रखें। व्यवस्थित रहें और अपने स्वास्थ्य यात्रा में कोई भी कदम न चूकें।",
+    "Gentle Reminders": "कोमल अनुस्मारक",
+    "Receive gentle reminders when it's time to take your medicine. Let us help you stay consistent, ensuring you never forget a dose.": "जब दवा लेने का समय हो, तो कोमल अनुस्मारक प्राप्त करें। हम आपको नियमित रहने में मदद करेंगे ताकि आप एक भी खुराक न भूलें।",
+    "Skip": "छोड़ें",
+    "Done": "पूर्ण",
+    "Language": "भाषा",
+    "Appearance": "रूप",
+    "Light Theme": "हल्का थीम",
+    "Dark Theme": "गहरा थीम",
+    "System Default": "सिस्टम डिफ़ॉल्ट",
+    "Select your preferred language": "अपनी पसंदीदा भाषा चुनें"
 }
