--- a/assets/translations/mr-IN.json
+++ b/assets/translations/mr-IN.json
@@ -22,7 +22,7 @@
     "Add Medicine": "औषध जोडा",
     "Scan Medicine": "औषध स्कॅन करा",
     "Scan Prescription": "प्रिस्क्रिप्शन स्कॅन करा",
-    "Prescrtiption Scanner": "प्रिस्क्रिप्शन स्कॅनर",
+    "Prescription Scanner": "प्रिस्क्रिप्शन स्कॅनर",
     "No documents scanned yet.": "अजून कोणतेही कागदपत्र स्कॅन झालेले नाहीत.",
     "DocumentNumber": "कागदपत्र {number}",
     "Prescription Details": "प्रिस्क्रिप्शन तपशील",
@@ -338,5 +338,19 @@
     "Already have an account?": "आधीच खाते आहे का?",
     "Allow": "परवानगी द्या",
     "Don't allow": "परवानगी नाकाराः",
-    "Or Continue with": "किंवा यासह पुढे जा"
+    "Or Continue with": "किंवा यासह पुढे जा",
+    "Wellness Path": "आरोग्य मार्ग",
+    "Begin your path to better health by managing your medications effortlessly. Stay organized, and embrace a healthier lifestyle from day one.": "आपल्या औषधांचे व्यवस्थापन सहजपणे करून अधिक चांगल्या आरोग्याची वाटचाल सुरू करा. व्यवस्थित रहा आणि पहिल्या दिवसापासूनच निरोगी जीवनशैली स्वीकारा.",
+    "Stay on Track": "मार्गावर राहा",
+    "Keep your health goals in check by managing your medication schedule. Stay organized and never miss a step in your wellness journey.": "आपल्या औषधांचे वेळापत्रक व्यवस्थित ठेवून आपले आरोग्य लक्ष्य नियंत्रित ठेवा. व्यवस्थित रहा आणि आपल्या आरोग्य प्रवासातील एकही पाऊल चुकवू नका.",
+    "Gentle Reminders": "मृदू आठवण",
+    "Receive gentle reminders when it's time to take your medicine. Let us help you stay consistent, ensuring you never forget a dose.": "जेव्हा औषध घेण्याची वेळ होते तेव्हा मृदू आठवणी मिळवा. आम्ही आपल्याला सातत्य राखण्यास मदत करू, जेणेकरून आपण एकही डोस विसरणार नाही.",
+    "Skip": "चुकवणे",
+    "Done": "पूर्ण",
+    "Language": "भाषा",
+    "Appearance": "दृश्यरूप",
+    "Light Theme": "हलका थीम",
+    "Dark Theme": "गडद थीम",
+    "System Default": "सिस्टम डीफॉल्ट",
+    "Select your preferred language": "आपली पसंतीची भाषा निवडा"
 }
